<resources>
    <string name="app_name">SemanaDia</string>
    <string name="saludo">Bienvenido al …</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
</resources>