<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9DEBFA"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/lunesRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lunes" />

        <RadioButton
            android:id="@+id/martesRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/martes" />

        <RadioButton
            android:id="@+id/miercolesRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miercoles" />

        <RadioButton
            android:id="@+id/juevesRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jueves" />

        <RadioButton
            android:id="@+id/viernesRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viernes" />

        <RadioButton
            android:id="@+id/sabadoRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sabado" />

        <RadioButton
            android:id="@+id/domingoRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/domingo" />
    </RadioGroup>

    <TextView
        android:id="@+id/saludoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/saludo"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <Spinner
        android:id="@+id/horaSpinner"
        android:layout_width="125sp"
        android:layout_height="wrap_content"
        android:entries="@array/opciones_tiempo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>